--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.1.1
 django-environ==0.4.5
 gunicorn==20.0.4
 psycopg2==2.8.6
+python-dotenv==0.14.0
 pytz==2020.1
 sqlparse==0.3.1
 whitenoise==5.2.0
